--- a/public/html/sidepanel.html
+++ b/public/html/sidepanel.html
@@ -2,41 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AI Macros Sidebar</title>
+    <title>AI Macros Sidepanel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/content-container.css">
 </head>
-
 <body>
-    <!-- Sidebar -->
-    <nav>
-        <ul>
-            <li>
-                <div>
-                    <i class="bi bi-box-arrow-in-right icon"></i>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <i class="bi bi-chat-dots icon"></i>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <i class="bi bi-tools icon"></i>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <i class="bi bi-gear icon"></i>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <i class="bi bi-cpu icon"></i>
-                </div>
-            </li>
-        </ul>
-    </nav>
+    <section>
+        <div class="container-fluid d-flex justify-content-center mt-2">
+            <nav class="navbar navbar-expand">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="apply" data-text="Apply">
+                            <i class="bi bi-lightning-fill icon"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="chat" data-text="Chat">
+                            <i class="bi bi-chat-dots icon"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="build" data-text="Build">
+                            <i class="bi bi-tools icon"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="manage" data-text="Manage">
+                            <i class="bi bi-gear icon"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="models" data-text="Models">
+                            <i class="bi bi-cpu icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <section class="content-section">
+        <div id="content-container" class="content-container">
+            <!-- Dynamic content will be loaded here -->
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../src/sidepanel.js"></script>
+    <script src="../../dist/sidepanel.js"></script>
+
 </body>
 </html>
