enhanced the styles

--- a/public/html/sidepanel.html
+++ b/public/html/sidepanel.html
@@ -15,7 +15,7 @@
             <nav class="navbar navbar-expand">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-page="apply" data-text="Apply">
+                        <a class="nav-link active" href="#" data-page="apply" data-text="Apply">
                             <i class="bi bi-lightning-fill icon"></i>
                         </a>
                     </li>
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-page="extras" data-text="Extras">
+                        <a class="nav-link" href="#" data-page="more" data-text="More">
                             <i class="bi bi-stars icon"></i>
                         </a>
                     </li>
