enhanced the styles

--- a/public/html/sidepanel.html
+++ b/public/html/sidepanel.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/content-container.css">
+    <link rel="stylesheet" href="../css/sidepanel.css">
 </head>
 <body>
     <section>
@@ -57,8 +56,8 @@
     <script src="../../libs/bootstrap.bundle.min.js"></script>
     <script src="../../src/sidepanel.js"></script>
     <script src="../../src/apis.js" type="module"></script>
-    <script src="../../src/personal_apis.js" type="module"></script>
-    <script src="../../src/default-apis.js" type="module"></script>
+    <script src="../../src/templates/personal_apis.js" type="module"></script>
+    <script src="../../src/templates/api_templates.js" type="module"></script>
 
 </body>
 </html>
