--- a/public/html/apis.html
+++ b/public/html/apis.html
@@ -23,8 +23,8 @@
                     <form id="apiForm">
                         <input type="hidden" id="apiId">
                         <div class="form-group">
-                            <label for="modelProvider">Model Provider</label>
-                            <input type="text" class="form-control" id="modelProvider" required>
+                            <label for="apiName">API Name</label>
+                            <input type="text" class="form-control" id="apiName" required>
                         </div>
                         <div class="form-group">
                             <label for="description">Description</label>
