Made the modal window independant

--- a/public/html/model_modal.html
+++ b/public/html/model_modal.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
-                        <textarea class="form-control" id="description" rows="3" required></textarea>
+                        <textarea class="form-control auto-resize" id="description" rows="3" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="apiName" class="form-label">API Name</label>
@@ -33,11 +33,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="systemPrompt" class="form-label">System Prompt</label>
-                        <textarea class="form-control" id="systemPrompt" rows="3" required></textarea>
+                        <textarea class="form-control auto-resize" id="systemPrompt" rows="3" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="curlCommand" class="form-label">Curl Command</label>
-                        <textarea class="form-control" id="curlCommand" rows="5" required></textarea>
+                        <textarea class="form-control auto-resize" id="curlCommand" rows="5" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="responseParser" class="form-label">Response Parser</label>
