--- a/public/html/api_modal.html
+++ b/public/html/api_modal.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
-                        <textarea class="form-control" id="description" rows="3" required></textarea>
+                        <textarea class="form-control auto-resize" id="description" rows="3" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="apiKey" class="form-label">API Key</label>
