Adjusted the modal windows

--- a/public/html/sidepanel.html
+++ b/public/html/sidepanel.html
@@ -40,8 +40,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-page="more" data-text="More">
-                                <i class="bi bi-stars icon"></i>
+                            <a class="nav-link" href="#" data-page="options" data-text="Options">
+                                <i class="bi bi-gear icon"></i>
                             </a>
                         </li>
                     </ul>
