--- a/public/html/sidepanel.html
+++ b/public/html/sidepanel.html
@@ -5,7 +5,7 @@
     <title>AI Macros Sidepanel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/sidepanel.css">
 </head>
 <body>
@@ -15,8 +15,8 @@
                 <nav class="navbar navbar-expand">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" data-page="apply" data-text="Apply">
-                                <i class="bi bi-lightning-fill icon"></i>
+                            <a class="nav-link" href="#" data-page="macros" data-text="Macros">
+                                <i class="bi bi-rewind-circle-fill icon"></i>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -25,8 +25,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-page="macros" data-text="Macros">
-                                <i class="bi bi-tools icon"></i>
+                            <a class="nav-link" href="#" data-page="agents" data-text="Agents">
+                                <i class="bi bi-robot icon"></i>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -35,13 +35,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-page="apis" data-text="API Keys">
-                                <i class="bi bi-plug icon"></i>
+                            <a class="nav-link" href="#" data-page="apis" data-text="APIs">
+                                <i class="bi bi-key-fill icon"></i>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-page="options" data-text="Options">
-                                <i class="bi bi-gear icon"></i>
+                            <a class="nav-link" href="#" data-page="home" data-text="Home">
+                                <i class="bi bi-house-gear-fill icon"></i>
                             </a>
                         </li>
                     </ul>
