--- a/public/html/models.html
+++ b/public/html/models.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Model Setup</title>
+    <title>Model Management</title>
 </head>
 <body>
     <div class="model-container">
-        <h2 class="model-title">Model Setup</h2>
+        <h2 class="model-title">Model Management</h2>
         <button id="addModelBtn" class="btn btn-primary mb-3">Add New Model</button>
         <div id="modelList"></div>
     </div>
