cleaned the code

--- a/public/html/apis.html
+++ b/public/html/apis.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Modal for adding/editing API -->
-    <div class="modal" id="apiModal" tabindex="-1" role="dialog">
+    <!-- <div class="modal" id="apiModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -42,6 +42,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
