--- a/public/html/model_modal.html
+++ b/public/html/model_modal.html
@@ -18,8 +18,8 @@
                 <form id="modelForm">
                     <input type="hidden" id="modelId">
                     <div class="mb-3">
-                        <label for="modelName" class="form-label">Model Name</label>
-                        <input type="text" class="form-control" id="modelName" required>
+                        <label for="modelInstanceName" class="form-label">Model Name</label>
+                        <input type="text" class="form-control" id="modelInstanceName" required>
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
