--- a/public/html/api_modal.html
+++ b/public/html/api_modal.html
@@ -11,7 +11,7 @@
     <div class="modal-wrapper">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="apiModalLabel">Add/Edit API</h5>
+                <h5 class="model-instance-title" id="apiModalLabel">Add/Edit API</h5>
                 <button type="button" class="btn-close" id="closeBtn" aria-label="Close"></button>
             </div>
             <div class="modal-body">
