made the apis and models tabs user friendly

--- a/public/html/model_modal.html
+++ b/public/html/model_modal.html
@@ -18,7 +18,7 @@
                 <form id="modelForm">
                     <input type="hidden" id="modelId">
                     <div class="mb-3">
-                        <label for="modelInstanceName" class="form-label">Model Name</label>
+                        <label for="modelInstanceName" class="form-label">Instance Name</label>
                         <input type="text" class="form-control" id="modelInstanceName" required>
                     </div>
                     <div class="mb-3">
