made the apis and models tabs user friendly

--- a/public/html/model_modal.html
+++ b/public/html/model_modal.html
@@ -11,23 +11,23 @@
     <div class="modal-wrapper">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="model-instance-title" id="modelInstanceTitle">Add/Edit Model Instance</h5>
+                <h5 class="model-title" id="modelTitle">Add/Edit Model</h5>
                 <button type="button" class="btn-close" id="closeBtn" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="modelForm">
                     <input type="hidden" id="modelId">
                     <div class="mb-3">
-                        <label for="modelInstanceName" class="form-label">Instance Name</label>
-                        <input type="text" class="form-control" id="modelInstanceName" required>
+                        <label for="modelName" class="form-label">Model Name</label>
+                        <input type="text" class="form-control" id="modelName" required>
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
                         <textarea class="form-control auto-resize" id="description" rows="3" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="modelName" class="form-label">Model Name</label>
-                        <select class="form-select" id="modelName">
+                        <label for="baseModel" class="form-label">Base Model</label>
+                        <select class="form-select" id="baseModel">
                             <option value="">Select a model</option>
                         </select>
                     </div>
