made the apis and models tabs user friendly

--- a/public/html/sidepanel.html
+++ b/public/html/sidepanel.html
@@ -58,10 +58,10 @@
     <script src="../../libs/bootstrap.bundle.min.js"></script>
     <script src="../../src/sidepanel.js"></script>
     <script src="../../src/apis.js" type="module"></script>
-    <script src="../../src/templates/personal_apis.js" type="module"></script>
-    <script src="../../src/templates/api_templates.js" type="module"></script>
+    <script src="../../src/data/personal_apis.js" type="module"></script>
+    <script src="../../src/data/api_examples.js" type="module"></script>
     <script src="../../src/models.js" type="module"></script>
-    <script src="../../src/templates/model_templates.js" type="module"></script>
+    <script src="../../src/data/model_examples.js" type="module"></script>
 
 </body>
 </html>
